# android_clickable_elements_overlay

./: README.md  main.py  pyproject.toml
