[project]
name = "key-maps"
version = "0.1.0"
description = ""
authors = [
    {name = "Jairton Filho",email = "jsff@cin.ufpe.br"}
]
readme = "README.md"
requires-python = ">=3.12, <4.0"
dependencies = [
    "opencv-python>=4.11.0.86",
    "uiautomator2>=3.2.9",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
